# Snake

./: .clang-format  .gitignore  .setup.sh.swp  CMakeLists.txt  Makefile  setup.sh
Modules/: FindSDL2_mixer.cmake
lib/: CMakeLists.txt
src/: Apple.cpp  Apple.h  CMakeLists.txt  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  Main.cpp  Makefile  Player.cpp  Player.h  SoundHandler.cpp  SoundHandler.h  Spawner.cpp  Spawner.h  TailSegment.cpp  TailSegment.h  TextHandler.cpp  TextHandler.h  Timer.cpp  Timer.h  resource.h
src/Handlers/: MusicHandler.cpp  MusicHandler.hpp
src/SDL/: SDLBmp.cpp  SDLBmp.h  SDLError.cpp  SDLError.h  SDLManager.cpp  SDLManager.h  SDLMath.h  SDLWindow.h
